used User Authorization API

--- a/src/main/webapp/Tdt.html
+++ b/src/main/webapp/Tdt.html
@@ -1,10 +1,7 @@
 <html>
 <head>
 
-    <!--                                           -->
-    <!-- Any title is fine                         -->
-    <!--                                           -->
-    <title>Wrapper HTML for App</title>
+    <title>Level-Up-U</title>
 
     <!--                                           -->
     <!-- Use normal html, such as style            -->
@@ -45,14 +42,7 @@
 <!--                                            -->
 <script type="text/javascript" language="javascript" src="Tdt/Tdt.nocache.js"></script>
 
-<h1>Sample Application</h1>
-
-<p>
-    This is an example of a host page for the App application.
-    You can attach a Web Toolkit module to any HTML page you like,
-    making it easy to add bits of AJAX functionality to existing pages
-    without starting from scratch.
-</p>
+<h1>Level-Up-U</h1>
 
 <table align="center">
     <tr>
