gwt command pattern

--- a/src/main/webapp/Tdt.html
+++ b/src/main/webapp/Tdt.html
@@ -30,26 +30,13 @@
 
 </head>
 
-<!--                                           -->
-<!-- The body can have arbitrary html, or      -->
-<!-- you can leave the body empty if you want  -->
-<!-- to create a completely dynamic ui         -->
-<!--                                           -->
 <body>
 
-<!--                                            -->
-<!-- This script is required bootstrap stuff.   -->
-<!--                                            -->
+<!-- gwt bootstrap -->
 <script type="text/javascript" language="javascript" src="Tdt/Tdt.nocache.js"></script>
 
+<table align="right"><tr><td id="signin"></td></tr></table>
 <h1>Level-Up-U</h1>
 
-<table align="center">
-    <tr>
-        <td id="slot1"></td>
-        <td id="slot2"></td>
-        <td id="signin"></td>
-    </tr>
-</table>
 </body>
 </html>
