implemented TrialEditor in MVP pattern

--- a/src/main/webapp/Tdt.html
+++ b/src/main/webapp/Tdt.html
@@ -38,5 +38,9 @@
 <table align="right"><tr><td id="signin"></td></tr></table>
 <h1>Level-Up-U</h1>
 
+<table align="left">
+    <tr><td id="trialeditor"></td></tr>
+</table>
+
 </body>
 </html>
