TrialEditorDisplay binded to presenter - TrialEditor

--- a/src/main/webapp/Tdt.html
+++ b/src/main/webapp/Tdt.html
@@ -39,7 +39,7 @@
 <h1>Level-Up-U</h1>
 
 <table align="left">
-    <tr><td id="trialeditor"></td></tr>
+    <tr><td id="editor_trial"></td></tr>
 </table>
 
 </body>
