TrialsTable somewhat works

--- a/src/main/webapp/Tdt.html
+++ b/src/main/webapp/Tdt.html
@@ -38,6 +38,7 @@
 <table align="right"><tr><td id="signin"></td></tr></table>
 <h1>Level-Up-U</h1>
 
+<div id="add_trial"></div>
 <div id="table_trial"></div>
 
 <table align="left">
