implemented AuthCheck on load. it doesnt work - our Actions seem broken T_T

--- a/src/main/webapp/Tdt.html
+++ b/src/main/webapp/Tdt.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-    <title>Level-Up-U</title>
+    <title>level-up.me</title>
 
     <!--                                           -->
     <!-- Use normal html, such as style            -->
@@ -36,7 +36,6 @@
 <script type="text/javascript" language="javascript" src="Tdt/Tdt.nocache.js"></script>
 
 <table align="right"><tr><td id="signin"></td></tr></table>
-<h1>Level-Up-U</h1>
 
 <div id="add_trial"></div>
 <div id="table_trial"></div>
