GoogleDataIntegrator works - got session token successfully

--- a/src/main/webapp/Tdt.html
+++ b/src/main/webapp/Tdt.html
@@ -54,6 +54,7 @@
 
 <table align="right"><tr><td id="signin"></td></tr></table>
 
+<div id="gcal_integrate"></div>
 <div id="add_trial"></div>
 <div id="table_trial"></div>
 
