--- a/src/main/webapp/Tdt.html
+++ b/src/main/webapp/Tdt.html
@@ -55,6 +55,7 @@
 <table align="right"><tr><td id="signin"></td></tr></table>
 
 <div id="gcal_integrate"></div>
+<div id="sample_event"></div>
 <div id="add_trial"></div>
 <div id="table_trial"></div>
 
